# django-demo

./: .gitignore  README.md
102-apptoken/: Pipfile  (+1 more)
103a-docker_poetry_deploy/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
103a-docker_poetry_deploy/proj/: settings.py  settings_proj.py
127-django_styleguide_file_manage/: README.md  pyproject.toml
127-django_styleguide_file_manage/config/: settings.py  settings_proj.py  urls.py
127-django_styleguide_file_manage/files/: __init__.py  admin.py  apps.py  models.py  services.py
127-django_styleguide_file_manage/files/migrations/: 0001_initial.py
130-manage_inspectdb/: README.md  create_sql.sql  pyproject.toml
130-manage_inspectdb/proj/: settings.py  settings_proj.py
130-manage_inspectdb/testapp/: models.py
131-aliyun-sendsms/: env.example  pyproject.toml  pytest.ini
131-aliyun-sendsms/aliyun_sendsms/: README.md  __init__.py  apps.py  models.py  sendsms.py  tests.py
131-aliyun-sendsms/proj/: settings.py  settings_proj.py
132-django-filters/: pyproject.toml
132-django-filters/app_name/: __init__.py  apps.py-tpl  urls.py-tpl
132-django-filters/app_name/admin/: __init__.py  app_name.py-tpl
132-django-filters/app_name/apis/: app_name.py-tpl
132-django-filters/app_name/forms/: app_name.py-tpl
132-django-filters/app_name/models/: __init__.py  app_name.py-tpl  post.py-tpl
132-django-filters/app_name/resources/: app_name.py-tpl
132-django-filters/app_name/selectors/: app_name.py-tpl
132-django-filters/app_name/serializers/: __init__.py-tpl  app_name.py-tpl
132-django-filters/proj/: settings.py  settings_proj.py  urls.py  urls_swagger.py
132-django-filters/testapp/: apps.py  requirements.txt  urls.py
132-django-filters/testapp/admin/: __init__.py  testapp.py
132-django-filters/testapp/apis/: testapp.py
132-django-filters/testapp/filters/: testapp.py
132-django-filters/testapp/forms/: testapp.py
132-django-filters/testapp/migrations/: 0001_initial.py
132-django-filters/testapp/models/: __init__.py  post.py  testapp.py
132-django-filters/testapp/resources/: testapp.py
132-django-filters/testapp/selectors/: testapp.py
132-django-filters/testapp/serializers/: __init__.py  testapp.py
132-django-filters/testapp/services/: testapp.py
133-drf_auth/: README.md  pyproject.toml
133-drf_auth/auth_api/: __init__.py  response.py  urls.py
133-drf_auth/auth_api/apis/: base.py  baseviewset.py  current_user.py  token.py  user_change_password.py
133-drf_auth/auth_api/serializers/: __init__.py
133-drf_auth/proj/: settings.py  settings_proj.py  urls.py  urls_swagger.py
134-django_ninja/: README.md  pyproject.toml
134-django_ninja/proj/: api.py  settings.py  settings_proj.py  urls.py
201-django_user/: pyproject.toml
201-django_user/config/: settings.py
201-django_user/user/: admin.py  apps.py  models.py
201-django_user/user/migrations/: 0001_initial.py
202-django_ninja_login/: pyproject.toml
202-django_ninja_login/config/: settings.py  urls.py
202-django_ninja_login/user/: apis.py  services.py
203-django_ninja_router/: pyproject.toml
203-django_ninja_router/blogs/: api.py
203-django_ninja_router/config/: api.py  settings.py  urls.py
203-django_ninja_router/events/: api.py
203-django_ninja_router/news/: api.py
204-ninja_custom_response/: pyproject.toml
204-ninja_custom_response/config/: api.py  settings.py
205-ninja_custom_pagination/: README.md  pyproject.toml
205-ninja_custom_pagination/config/: api.py  settings.py
206-ninja_query_in/: pyproject.toml
206-ninja_query_in/config/: api.py  settings.py  urls.py
207-ninja_user_service/: pyproject.toml
207-ninja_user_service/config/: api.py  settings.py
207-ninja_user_service/user/: admin.py  apis.py  models.py  schemas.py  services.py
207-ninja_user_service/user/migrations/: 0001_initial.py
208-ninja_error_handler/: pyproject.toml
208-ninja_error_handler/config/: api.py  settings.py
210-ninja_token/: pyproject.toml
210-ninja_token/config/: api.py  settings.py
211-django_q_demo/: README.md  pyproject.toml
211-django_q_demo/config/: settings.py
211-django_q_demo/task/: apps.py  schedule.py  tasks.py
212-django_uvicorn/: pyproject.toml  start.bat
212-django_uvicorn/config/: settings.py
213-ninja_field/: pyproject.toml
213-ninja_field/config/: api.py  settings.py
214-ninja_upload_file/: pyproject.toml
214-ninja_upload_file/config/: api.py  settings.py  urls.py
217-django_allauth_demo/: .env.example  README.md  pyproject.toml
217-django_allauth_demo/config/: settings.py  urls.py
217-django_allauth_demo/user_profile/: urls.py  views.py
219-django_zipapp_demo/: .gitignore  README.md  pyproject.toml  requirements.txt  zipapp_build.bat
219-django_zipapp_demo/config/: settings.py
220-nacos_client/: .env.example  .gitignore  pyproject.toml
220-nacos_client/config/: settings.py  settings_nacos.py
220-nacos_client/nacos_client/: README.md  apps.py  logger.py  services.py
221-django_stripe_demo/: pyproject.toml
221-django_stripe_demo/config/: settings.py  urls.py
222-docker_python310_poetry/: .dockerignore  dockerfile  pyproject.toml
222-docker_python310_poetry/config/: settings.py
223-ninja_async_demo/: README.md  batch_add_user.py  pyproject.toml
223-ninja_async_demo/config/: apis.py  settings.py  urls.py
224-action_log/: README.md  pyproject.toml
224-action_log/action_log/: apps.py  models.py  services.py  tests.py
224-action_log/action_log/migrations/: 0001_initial.py
224-action_log/config/: settings.py
226-passkey_demo/: pyproject.toml
226-passkey_demo/config/: settings.py  settings_passkey.py  urls.py
226-passkey_demo/passkeys/: apps.py  models.py
226-passkey_demo/passkeys/migrations/: 0002_alter_userpasskey_id.py
226-passkey_demo/templates/: base.html
227-django_apscheduler_demo/: README.md  pyproject.toml
227-django_apscheduler_demo/apscheduler_tasks/: admin.py  apps.py
227-django_apscheduler_demo/config/: settings.py  settings_simpleui.py
229_bootstrap5/: pyproject.toml
229_bootstrap5/config/: settings.py  urls.py
(+456 files in other folders)
