[tool.poetry]
name = "docker_poetry_deploy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Django = "<3.0"
python-dotenv = "^0.20.0"
waitress = "^2.0"
whitenoise = "^5.0"
psycopg2-binary = "^2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
