[tool.poetry]
name = "132-django-filters"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Django = "<3.0"
django-filter = "^21.1"
djangorestframework = "^3.0"
drf-yasg = "^1.21.4"
django-import-export = "^2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
