[tool.poetry]
name = "212-django-uvicorn"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "212_django_uvicorn"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
