[tool.poetry]
name = "214-ninja-upload-file"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "214_ninja_upload_file"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
django-ninja = "^0.22.2"


[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
