[tool.poetry]
name = "217-django-allauth-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "217_django_allauth_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
django-allauth = "^0.56.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
