[tool.poetry]
name = "222-docker-python310-poetry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
gunicorn = "^21.2.0"
mysqlclient = "^2.2.0"


[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
